--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -25,13 +25,19 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Compile TypeScript
+        run: npx tsc
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: |
+            dist
+            package.json
+            package-lock.json
+            .env
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,5 +58,5 @@ jobs:
         with:
           app-name: 'InhibitorWychwytuZwrotnegoSerotoniny'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3818BFE36CE9452783D1D1B50A8095C0 }}
