--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -19,16 +19,13 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
 
-      - name: Compile TypeScript
-        run: npx tsc
-      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -43,20 +40,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      - name: 'Deploy to Azure Web App'
+
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'InhibitorWychwytuZwrotnegoSerotoniny'
-          slot-name: 'Production'
+          app-name: "InhibitorWychwytuZwrotnegoSerotoniny"
+          slot-name: "Production"
           package: ./dist
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3818BFE36CE9452783D1D1B50A8095C0 }}
