--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc --noResolve --noCheck",
-    "preview": "node dist/index.js"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc --noResolve --noCheck"
   },
   "author": "",
   "license": "ISC",
