--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node src/index.ts",
-    "build": "tsc --noResolve --noCheck"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
