--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           name: node-app
           path: |
-            dist
+            index.js
             package.json
             package-lock.json
             .env
@@ -55,5 +55,5 @@ jobs:
         with:
           app-name: "InhibitorWychwytuZwrotnegoSerotoniny"
           slot-name: "Production"
-          package: ./dist
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3818BFE36CE9452783D1D1B50A8095C0 }}
