--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -45,6 +45,13 @@ jobs:
         with:
           name: node-app
 
+      - name: Login to Azure
+          uses: azure/login@v2
+          with:
+            client-id: ${{ secrets.__clientidsecretname__ }}
+            tenant-id: ${{ secrets.__tenantidsecretname__ }}
+            subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+
       - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -52,4 +59,3 @@ jobs:
           app-name: "InhibitorWychwytuZwrotnegoSerotoniny"
           slot-name: "Production"
           package: .
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_3cf1f591f49a4e3dbc60e836321dbdfa }}
