--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -29,8 +29,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
-
+          path: |
+            .
+            !node_modules/**
   deploy:
     runs-on: ubuntu-latest
     needs: build
