--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node startup.js"
+    "start": "node startup.js",
+    "dev": "nodemon startup.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,12 @@
     "@types/express": "^5.0.0",
     "@types/mssql": "^9.1.6",
     "@types/node": "^22.10.5",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
