--- a/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
+++ b/.github/workflows/master_inhibitorwychwytuzwrotnegoserotoniny.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           node-version: "20.x"
 
-      - name: remove node_modules, npm install
+      - name: npm install
         run: |
-          ls
           npm install
+          npm install node-pre-gyp -g
+          npm rebuild bcrypt --build-from-source
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
